--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(Ceres 2.2 REQUIRED)
@@ -107,6 +108,7 @@ ament_target_dependencies(lidar_scan_odometry
   rclcpp
   sensor_msgs
   geometry_msgs
+  nav_msgs
   message_filters
   std_msgs
   tf2
