--- a/package.xml
+++ b/package.xml
@@ -12,6 +12,7 @@
 
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>nav_msgs</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <depend>roscpp</depend>
